--- a/index.html
+++ b/index.html
@@ -59,7 +59,7 @@
             <div class="publication-links">
               <!-- PDF Link. -->
               <span class="link-block">
-                <a href="https://arxiv.org/pdf/2011.12948"
+                <a href="https://openaccess.thecvf.com/content/ICCV2025/papers/Seizinger_Bokehlicious_Photorealistic_Bokeh_Rendering_with_Controllable_Apertures_ICCV_2025_paper.pdf"
                    class="external-link button is-normal is-rounded is-dark">
                   <span class="icon">
                       <i class="fas fa-file-pdf"></i>
@@ -68,12 +68,12 @@
                 </a>
               </span>
               <span class="link-block">
-                <a href="https://arxiv.org/abs/2011.12948"
+                <a href="https://openaccess.thecvf.com/content/ICCV2025/supplemental/Seizinger_Bokehlicious_Photorealistic_Bokeh_ICCV_2025_supplemental.pdf"
                    class="external-link button is-normal is-rounded is-dark">
                   <span class="icon">
                       <i class="fas fa-file-pdf"></i>
                   </span>
-                  <span>Supplementary - TBU</span>
+                  <span>Supplementary</span>
                 </a>
               </span>
               <!-- Code Link. -->
